Init Portfolio Home, added bio + timeline + init skill section

--- a/content/home.html
+++ b/content/home.html
@@ -1,3 +1,5 @@
+
+<!DOCTYPE html>
 <html>
 
   <head lang="it">
@@ -8,11 +10,13 @@
 
     <title> Brian Atzori | Formazione, Sperimentazione, Crescita </title>
 
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <link rel="icon" type="image/x-icon" href="../favicon.ico">
 
     <link rel="stylesheet" href="../assets/styles/general-style.css">
 
-    <link rel="stylesheet" href="../assets/styles/index.css">
+    <link rel="stylesheet" href="../assets/styles/home.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 
@@ -23,6 +27,315 @@
   </head>
 
   <body>
+
+      <div class="container">
+
+        <div class="content-container">
+
+          <img class="self-pic" src="../assets/images/brat_bg.png"/>
+
+          <div class="divider"></div>
+
+          <div class="bio-container">
+
+            <h3>#bio</h3>
+
+            <p class="bio">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vestibulum vulputate magna, ut porttitor augue euismod ut. Quisque gravida erat a libero pretium convallis. Quisque in enim venenatis, feugiat sapien ut, tristique dui. Ut eget sapien diam. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum a sem quam. Vivamus quis lacus et eros vestibulum condimentum. Nullam lacinia luctus sem, at dictum nulla fermentum in. Mauris ut sodales lectus. Donec ut urna at urna elementum lobortis. Nulla convallis, dolor eget hendrerit porta, ipsum lorem lobortis dui, eget congue lacus mi at erat. Maecenas porta justo eget nulla sodales, vitae tincidunt dolor efficitur. Etiam venenatis tempus massa vel venenatis. Sed vel fermentum magna.
+
+            </p>
+
+          </div>
+
+          <div class="divider"></div>
+
+          <div class="path-container">
+
+            <h3>#percorso</h3>
+
+            <div class="timeline">
+
+              <div class="row no-gutters justify-content-end justify-content-md-around align-items-start  timeline-nodes">
+
+                <div class="col-10 col-md-5 order-3 order-md-1 timeline-content">
+
+                  <h3 class=" text-light">Studi Informatici</h3>
+
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, eaque amet deleniti hic quas qui cumque delectus aliquid, eius quia quod, quae, aliquam aspernatur facilis. Minima quod corporis dignissimos porro.</p>
+
+                </div>
+
+                <div class="col-2 col-sm-1 px-md-3 order-2 timeline-image text-md-center">
+
+                  <img src="../assets/images/keynes.jpeg" class="img-fluid" alt="img">
+
+                </div>
+
+                <div class="col-10 col-md-5 order-1 order-md-3 py-3 timeline-date">
+
+                  <time>2011</time>
+
+                </div>
+
+              </div>
+
+              <div class="row no-gutters justify-content-end justify-content-md-around align-items-start  timeline-nodes">
+
+                <div class="col-10 col-md-5 order-3 order-md-1 timeline-content">
+
+                  <h3 class=" text-light">Krav Maga con HS</h3>
+
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, eaque amet deleniti hic quas qui cumque delectus aliquid, eius quia quod, quae, aliquam aspernatur facilis. Minima quod corporis dignissimos porro.</p>
+
+                </div>
+
+                <div class="col-2 col-sm-1 px-md-3 order-2 timeline-image text-md-center">
+
+                  <img src="../assets/images/hs.png" class="img-fluid" alt="img">
+
+                </div>
+
+                <div class="col-10 col-md-5 order-1 order-md-3 py-3 timeline-date">
+
+                  <time>2013</time>
+
+                </div>
+
+              </div>
+
+              <div class="row no-gutters justify-content-end justify-content-md-around align-items-start  timeline-nodes">
+
+                <div class="col-10 col-md-5 order-3 order-md-1 timeline-content">
+
+                  <h3 class=" text-light">Sielco Srl</h3>
+
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, eaque amet deleniti hic quas qui cumque delectus aliquid, eius quia quod, quae, aliquam aspernatur facilis. Minima quod corporis dignissimos porro.</p>
+
+                </div>
+
+                <div class="col-2 col-sm-1 px-md-3 order-2 timeline-image text-md-center">
+
+                  <img src="../assets/images/sielco.png" class="img-fluid" alt="img">
+
+                </div>
+
+                <div class="col-10 col-md-5 order-1 order-md-3 py-3 timeline-date">
+
+                  <time>Ottobre 2017</time>
+
+                </div>
+
+              </div>
+
+              <div class="row no-gutters justify-content-end justify-content-md-around align-items-start  timeline-nodes">
+
+                <div class="col-10 col-md-5 order-3 order-md-1 timeline-content">
+
+                  <h3 class=" text-light">Formazione Extra Lavorativa</h3>
+
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, eaque amet deleniti hic quas qui cumque delectus aliquid, eius quia quod, quae, aliquam aspernatur facilis. Minima quod corporis dignissimos porro.</p>
+
+                </div>
+
+                <div class="col-2 col-sm-1 px-md-3 order-2 timeline-image text-md-center">
+
+                  <img src="../assets/images/books.png" class="img-fluid" alt="img">
+
+                </div>
+
+                <div class="col-10 col-md-5 order-1 order-md-3 py-3 timeline-date">
+
+                  <time>2020</time>
+
+                </div>
+
+              </div>
+
+              <div class="row no-gutters justify-content-end justify-content-md-around align-items-start  timeline-nodes">
+
+                <div class="col-10 col-md-5 order-3 order-md-1 timeline-content">
+
+                  <h3 class=" text-light">Inizio del progetto "Discoapp"</h3>
+
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, eaque amet deleniti hic quas qui cumque delectus aliquid, eius quia quod, quae, aliquam aspernatur facilis. Minima quod corporis dignissimos porro.</p>
+
+                </div>
+
+                <div class="col-2 col-sm-1 px-md-3 order-2 timeline-image text-md-center">
+
+                  <img src="../assets/images/disco-ball.png" class="img-fluid" alt="img">
+
+                </div>
+
+                <div class="col-10 col-md-5 order-1 order-md-3 py-3 timeline-date">
+
+                  <time>Gennaio 2021</time>
+
+                </div>
+
+              </div>
+
+              <div class="row no-gutters justify-content-end justify-content-md-around align-items-start  timeline-nodes">
+
+                <div class="col-10 col-md-5 order-3 order-md-1 timeline-content">
+
+                  <h3 class=" text-light">Delta Informatica SA</h3>
+
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, eaque amet deleniti hic quas qui cumque delectus aliquid, eius quia quod, quae, aliquam aspernatur facilis. Minima quod corporis dignissimos porro.</p>
+
+                </div>
+
+                <div class="col-2 col-sm-1 px-md-3 order-2 timeline-image text-md-center">
+
+                  <img src="../assets/images/delta.png" class="img-fluid" alt="img">
+
+                </div>
+
+                <div class="col-10 col-md-5 order-1 order-md-3 py-3 timeline-date">
+
+                  <time>Luglio 2021</time>
+
+                </div>
+
+              </div>
+
+              <div class="row no-gutters justify-content-end justify-content-md-around align-items-start  timeline-nodes">
+
+                <div class="col-10 col-md-5 order-3 order-md-1 timeline-content">
+
+                  <h3 class=" text-light">Nasce Discovery Srl</h3>
+
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, eaque amet deleniti hic quas qui cumque delectus aliquid, eius quia quod, quae, aliquam aspernatur facilis. Minima quod corporis dignissimos porro.</p>
+
+                </div>
+
+                <div class="col-2 col-sm-1 px-md-3 order-2 timeline-image text-md-center">
+
+                  <img src="../assets/images/discovery-icon.png" class="img-fluid" alt="img" style="border-radius: 50%;">
+
+                </div>
+
+                <div class="col-10 col-md-5 order-1 order-md-3 py-3 timeline-date">
+
+                  <time>Gennaio 2022</time>
+
+                </div>
+
+              </div>
+
+              <div class="row no-gutters justify-content-end justify-content-md-around align-items-start  timeline-nodes">
+
+                <div class="col-10 col-md-5 order-3 order-md-1 timeline-content">
+
+                  <h3 class=" text-light">Dimissioni Lavorative</h3>
+
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, eaque amet deleniti hic quas qui cumque delectus aliquid, eius quia quod, quae, aliquam aspernatur facilis. Minima quod corporis dignissimos porro.</p>
+
+                </div>
+
+                <div class="col-2 col-sm-1 px-md-3 order-2 timeline-image text-md-center">
+
+                  <img src="../assets/images/work.png" class="img-fluid" alt="img">
+
+                </div>
+
+                <div class="col-10 col-md-5 order-1 order-md-3 py-3 timeline-date">
+
+                  <time>Marzo 2022</time>
+
+                </div>
+
+              </div>
+
+              <div class="row no-gutters justify-content-end justify-content-md-around align-items-start  timeline-nodes">
+
+                <div class="col-10 col-md-5 order-3 order-md-1 timeline-content">
+
+                  <h3 class=" text-light">Inizio del percorso Start2Impact</h3>
+
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, eaque amet deleniti hic quas qui cumque delectus aliquid, eius quia quod, quae, aliquam aspernatur facilis. Minima quod corporis dignissimos porro.</p>
+
+                </div>
+
+                <div class="col-2 col-sm-1 px-md-3 order-2 timeline-image text-md-center">
+
+                  <img src="../assets/images/start2impact.png" class="img-fluid" alt="img">
+
+                </div>
+
+                <div class="col-10 col-md-5 order-1 order-md-3 py-3 timeline-date">
+
+                  <time>Maggio 2022</time>
+
+                </div>
+
+              </div>
+
+              <div class="row no-gutters justify-content-end justify-content-md-around align-items-start  timeline-nodes">
+
+                <div class="col-10 col-md-5 order-3 order-md-1 timeline-content">
+
+                  <h3 class=" text-light"> Titolo </h3>
+
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, eaque amet deleniti hic quas qui cumque delectus aliquid, eius quia quod, quae, aliquam aspernatur facilis. Minima quod corporis dignissimos porro.</p>
+
+                </div>
+
+                <div class="col-2 col-sm-1 px-md-3 order-2 timeline-image text-md-center">
+
+                  <img src="../assets/images/grow.png" class="img-fluid" alt="img">
+
+                </div>
+
+                <div class="col-10 col-md-5 order-1 order-md-3 py-3 timeline-date">
+
+                  <time>Oggi</time>
+
+                </div>
+
+              </div>
+
+            </div>
+
+          </div>
+
+          <div class="divider"></div>
+
+          <div class="skills-wrapper">
+
+            <h3>#skills</h3>
+
+            <div class="skill-container">
+
+              <a href="https://placeholder.com"><img src="https://via.placeholder.com/50"></a>
+
+              <h6> Skill 1<h6>
+
+            </div>
+
+            <div class="skill-container">
+
+              <a href="https://placeholder.com"><img src="https://via.placeholder.com/50"></a>
+
+              <h6> Skill 1<h6>
+
+            </div>
+
+            <div class="skill-container">
+
+              <a href="https://placeholder.com"><img src="https://via.placeholder.com/50"></a>
+
+              <h6> Skill 1<h6>
+
+            </div>
+
+          </div>
+
+        </div>
+
+      </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
   </body>
 
