Skills Section + Styling

--- a/content/home.html
+++ b/content/home.html
@@ -18,11 +18,19 @@
 
     <link rel="stylesheet" href="../assets/styles/home.css">
 
+    <link rel="stylesheet" href="../assets/styles/bio.css">
+
+    <link rel="stylesheet" href="../assets/styles/path.css">
+
+    <link rel="stylesheet" href="../assets/styles/skills.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+
+    </script>
 
   </head>
 
@@ -38,7 +46,7 @@
 
           <div class="bio-container">
 
-            <h3>#bio</h3>
+            <h3 class="section-label">#bio</h3>
 
             <p class="bio">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vestibulum vulputate magna, ut porttitor augue euismod ut. Quisque gravida erat a libero pretium convallis. Quisque in enim venenatis, feugiat sapien ut, tristique dui. Ut eget sapien diam. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum a sem quam. Vivamus quis lacus et eros vestibulum condimentum. Nullam lacinia luctus sem, at dictum nulla fermentum in. Mauris ut sodales lectus. Donec ut urna at urna elementum lobortis. Nulla convallis, dolor eget hendrerit porta, ipsum lorem lobortis dui, eget congue lacus mi at erat. Maecenas porta justo eget nulla sodales, vitae tincidunt dolor efficitur. Etiam venenatis tempus massa vel venenatis. Sed vel fermentum magna.
@@ -51,7 +59,7 @@
 
           <div class="path-container">
 
-            <h3>#percorso</h3>
+            <h3 class="section-label">#percorso</h3>
 
             <div class="timeline">
 
@@ -301,33 +309,115 @@
 
           <div class="divider"></div>
 
+          <h3 class="section-label">#skills</h3>
+
           <div class="skills-wrapper">
 
-            <h3>#skills</h3>
-
             <div class="skill-container">
 
-              <a href="https://placeholder.com"><img src="https://via.placeholder.com/50"></a>
+              <img src="../assets/images/icons8-n-50.png">
 
-              <h6> Skill 1<h6>
+              <h6> Nagios <h6>
 
             </div>
 
             <div class="skill-container">
 
-              <a href="https://placeholder.com"><img src="https://via.placeholder.com/50"></a>
+              <img src="../assets/images/icons8-veeam-48.png">
 
-              <h6> Skill 1<h6>
+              <h6> Veeam <h6>
 
             </div>
 
             <div class="skill-container">
 
-              <a href="https://placeholder.com"><img src="https://via.placeholder.com/50"></a>
+              <img src="../assets/images/icons8-vmware-48.png">
 
-              <h6> Skill 1<h6>
+              <h6>VMWare<h6>
 
             </div>
+
+            <div class="skill-container">
+
+              <img src="../assets/images/icons8-open-end-wrench-100.png">
+
+              <h6>Gestione<br>Infrastruttura<h6>
+
+            </div>
+
+            <div class="skill-container">
+
+              <img src="../assets/images/icons8-23-helpdesk-58.png">
+
+              <h6>Supporto<br>Tecnico<h6>
+
+            </div>
+
+            <div class="skill-container">
+
+              <img src="../assets/images/icons8-nuvola-80.png">
+
+              <h6>Cloud<h6>
+
+            </div>
+
+            <div class="skill-container">
+
+              <img src="../assets/images/icons8-coding-64.png">
+
+              <h6>Coding<h6>
+
+            </div>
+
+            <div class="skill-container">
+
+              <img src="../assets/images/icons8-krav-maga-64.png">
+
+              <h6>Krav Maga<h6>
+
+            </div>
+
+            <div class="skill-container">
+
+              <img src="../assets/images/icons8-marketing-64.png">
+
+              <h6>Marketing<h6>
+
+            </div>
+
+            <div class="skill-container">
+
+              <img src="../assets/images/icons8-invest-64.png">
+
+              <h6>Finanza<h6>
+
+            </div>
+
+            <div class="skill-container">
+
+              <img src="../assets/images/icons8-bitcoin-48.png">
+
+              <h6>Criptovalute<h6>
+
+            </div>
+
+            <div class="skill-container">
+
+              <img src="../assets/images/icons8-growth-64.png">
+
+              <h6>Growth<h6>
+
+            </div>
+
+            <div class="skill-container">
+
+              <img src="../assets/images/icons8-ingranaggi-100.png">
+
+              <h6>Management<h6>
+
+            </div>
+
+
 
           </div>
 
