Added Contacts Section

--- a/content/home.html
+++ b/content/home.html
@@ -26,6 +26,8 @@
 
     <link rel="stylesheet" href="../assets/styles/skills.css">
 
+    <link rel="stylesheet" href="../assets/styles/contacts.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -436,6 +438,46 @@
           </div>
 
           <div class="divider"></div>
+
+        </div>
+
+        <div class="contacts-wrapper">
+
+          <div class="contact-container">
+
+            <a href="https://www.instagram.com/hatzorihanzo/" target="_blank"><img src="../assets/images/icon-instagram.svg"/></a>
+
+          </div>
+
+          <div class="contact-container">
+
+            <a href="https://www.linkedin.com/in/brian-atzori" target="_blank"><img src="../assets/images/icon-linkedin.svg"/></a>
+
+          </div>
+
+          <div class="contact-container">
+
+            <a href="https://twitter.com/AtzoriBrian" target="_blank"><img src="../assets/images/icon-twitter.svg"/></a>
+
+          </div>
+
+          <div class="contact-container">
+
+            <a href="https://github.com/BrianAtzori" target="_blank"><img src="../assets/images/icon-github.svg"/></a>
+
+          </div>
+
+          <div class="contact-container">
+
+            <a href="https://www.instagram.com/hatzorihanzo/" target="_blank"><img src="../assets/images/icon-discord.svg"/></a>
+
+          </div>
+
+          <div class="contact-container">
+
+            <a href="https://www.reddit.com/user/BrianAtzori" target="_blank"><img src="../assets/images/icon-reddit.svg"/></a>
+
+          </div>
 
         </div>
 
