--- a/content/home.html
+++ b/content/home.html
@@ -439,43 +439,45 @@
 
           <div class="divider"></div>
 
-        </div>
+          <h3 class="section-label">#contatti</h3>
 
-        <div class="contacts-wrapper">
+          <div class="contacts-wrapper">
 
-          <div class="contact-container">
+            <div class="contact-container">
 
-            <a href="https://www.instagram.com/hatzorihanzo/" target="_blank"><img src="../assets/images/icon-instagram.svg"/></a>
+              <a href="https://www.instagram.com/hatzorihanzo/" target="_blank"><img src="../assets/images/icon-instagram.svg"/></a>
 
-          </div>
+            </div>
 
-          <div class="contact-container">
+            <div class="contact-container">
 
-            <a href="https://www.linkedin.com/in/brian-atzori" target="_blank"><img src="../assets/images/icon-linkedin.svg"/></a>
+              <a href="https://www.linkedin.com/in/brian-atzori" target="_blank"><img src="../assets/images/icon-linkedin.svg"/></a>
 
-          </div>
+            </div>
 
-          <div class="contact-container">
+            <div class="contact-container">
 
-            <a href="https://twitter.com/AtzoriBrian" target="_blank"><img src="../assets/images/icon-twitter.svg"/></a>
+              <a href="https://twitter.com/AtzoriBrian" target="_blank"><img src="../assets/images/icon-twitter.svg"/></a>
 
-          </div>
+            </div>
 
-          <div class="contact-container">
+            <div class="contact-container">
 
-            <a href="https://github.com/BrianAtzori" target="_blank"><img src="../assets/images/icon-github.svg"/></a>
+              <a href="https://github.com/BrianAtzori" target="_blank"><img src="../assets/images/icon-github.svg"/></a>
 
-          </div>
+            </div>
 
-          <div class="contact-container">
+            <div class="contact-container">
 
-            <a href="https://www.instagram.com/hatzorihanzo/" target="_blank"><img src="../assets/images/icon-discord.svg"/></a>
+              <a href="https://www.instagram.com/hatzorihanzo/" target="_blank"><img src="../assets/images/icon-discord.svg"/></a>
 
-          </div>
+            </div>
 
-          <div class="contact-container">
+            <div class="contact-container">
 
-            <a href="https://www.reddit.com/user/BrianAtzori" target="_blank"><img src="../assets/images/icon-reddit.svg"/></a>
+              <a href="https://www.reddit.com/user/BrianAtzori" target="_blank"><img src="../assets/images/icon-reddit.svg"/></a>
+
+            </div>
 
           </div>
 
