--- a/content/home.html
+++ b/content/home.html
@@ -71,9 +71,11 @@
 
                 <div class="col-10 col-md-5 order-3 order-md-1 timeline-content">
 
-                  <h3 class=" text-light">Studi Informatici</h3>
+                  <h3 class=" text-light">Studi Scolastici</h3>
 
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, eaque amet deleniti hic quas qui cumque delectus aliquid, eius quia quod, quae, aliquam aspernatur facilis. Minima quod corporis dignissimos porro.</p>
+                  <p>Diplomato nel 2017 all'I.S.I.S "J.M Keynes di Gazzada" con 74.</p>
+                  <p>Durante il biennio ho studiato discipline scientifiche e le basi dell'informatica mentre nel triennio gli studi erano concentrati sulle discipline tecniche, approfondendo l'informatica a 360&deg;, dalla programmazione alla sistemistica.</p>
+                  <p>Nel momento di scegliere un percorso di studi, ero molto combattuto ma dentro di me sentivo che era presente il desiderio di creare qualcosa di mio.</p>
 
                 </div>
 
@@ -97,8 +99,9 @@
 
                   <h3 class=" text-light">Krav Maga con HS</h3>
 
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, eaque amet deleniti hic quas qui cumque delectus aliquid, eius quia quod, quae, aliquam aspernatur facilis. Minima quod corporis dignissimos porro.</p>
-
+                  <p>Nel corso del 2013 mi rendo conto che &egrave; necessario iniziare a curare la forma fisica e mentre ero alla ricerca di uno sfogo mi iscrivo ad un corso di Krav Maga, una disciplina di autodifesa israeliana, tenuto dalla societ&agrave; sportiva HS.</p>
+                  <p>ll metodo HS &egrave; orientato alla formazione intensa, valorizzando i risultati che si possono ottenere con molto studio e pratica.</p>
+                  <p>Con lo sport finalmente riesco a formare e rafforzare il carattere e la disciplina, acquistando sicurezza in me stesso e imparando il valore del sudore sulla fronte ma soprattutto a stringere sempre i denti.</p>
                 </div>
 
                 <div class="col-2 col-sm-1 px-md-3 order-2 timeline-image text-md-center">
@@ -119,10 +122,11 @@
 
                 <div class="col-10 col-md-5 order-3 order-md-1 timeline-content">
 
-                  <h3 class=" text-light">Sielco Srl</h3>
+                  <h3 class=" text-light">Si.El.Co Srl</h3>
 
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, eaque amet deleniti hic quas qui cumque delectus aliquid, eius quia quod, quae, aliquam aspernatur facilis. Minima quod corporis dignissimos porro.</p>
-
+                  <p>Dopo gli studi ho deciso di affrontare subito il mercato del lavoro e Si.El.Co &egrave; stata la mia prima esperienza lavorativa, come tecnico informatico.</p>
+                  <p>Ho iniziato formattando computer e imparando cosa significa realmente lavorare in campo informatico e con un po' di esperienza alle spalle mi &egrave; stato assegnato il ruolo di addetto al monitoraggio dei sistemi informatici dei clienti dove per facilitarmi il lavoro ho anche creato un'automazione che permetteva il dialogo tra il sistema di segnalazioni e il sistema di ticketing interno.</p>
+                  <p>Successivamente mi sono occupato con un team di 4 persone della gestione del cloud privato di Si.El.Co come figura junior, amministrando i sistemi dalla A alla Z e grazie a questo periodo di gavetta ho imparato moltissimo, creandomi un background molto ricco.</p>
                 </div>
 
                 <div class="col-2 col-sm-1 px-md-3 order-2 timeline-image text-md-center">
@@ -145,7 +149,10 @@
 
                   <h3 class=" text-light">Formazione Extra Lavorativa</h3>
 
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, eaque amet deleniti hic quas qui cumque delectus aliquid, eius quia quod, quae, aliquam aspernatur facilis. Minima quod corporis dignissimos porro.</p>
+                  <p>Alcuni eventi nella mia vita, insieme alla pandemia che &egrave; stato un periodo terribile per il mondo intero mi hanno portato a riflettere sulla mia vita e soprattutto su dove volessi arrivare in futuro.</p>
+                  <p>Mi sono trovato a rispolverare il sogno di creare qualcosa di mio, ponendomi come proposito per l'anno 2021 di gettare le basi per un mio progetto.</p>
+                  <p>Avendo imparato in passato il valore della formazione mi rendo conto che &egrave; necessario innanzitutto investire del tempo su me stesso per aumentarei il mio bagaglio di competenze, specie dopo essermi reso conto che la normalit&agrave; e la vita da dipendente <em>non mi bastavano.</em></p>
+                  <p>Dopo aver raccolto diverse fonti ho iniziato a studiare dopo il lavoro e in pausa pranzo, approfondendo innanzitutto il mondo delle criptovalute che mi affascinava molto, successivamente quello del growth e del marketing per arrivare poi alla finanza classica.</p>
 
                 </div>
 
@@ -169,8 +176,11 @@
 
                   <h3 class=" text-light">Inizio del progetto "Discoapp"</h3>
 
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, eaque amet deleniti hic quas qui cumque delectus aliquid, eius quia quod, quae, aliquam aspernatur facilis. Minima quod corporis dignissimos porro.</p>
-
+                  <p>Dicembre 2020: Il caso o la fortuna hanno voluto che l'estate precedente conoscessi un certo Davide, durante una splendida vacanza in Sardegna organizzata da amici in comune e in quel frangente mi accenn&ograve; ad un progetto a cui stava lavorando.</p>
+                  <p>Rimanemmo molto amici anche dopo la vacanza e proprio mentre continuavo la mia formazione e mentre ero alla ricerca di idee, durante una chiaccherata su investimenti e business mi ricord&ograve; di questa iniziativa di cui mi aveva parlato, raccontandomi che era alla ricerca di una persona con competenze informatiche che lo aiutasse a gestire l'infrastruttura ma soprattutto a programmare.&nbsp;</p>
+                  <p>In breve tempo organizzammo una chiamata e mi fece conoscere il team che stava costruendo e a Gennaio 2021 iniziammo a lavorare tutti insieme per concretizzare un'idea che inizialmente era chiamata "Find Your Party" o "Discoapp".</p>
+                  <p>Ora le mie pause pranzo e le mie serate si dividevano tra formazione e un secondo lavoro.</p>
+                  
                 </div>
 
                 <div class="col-2 col-sm-1 px-md-3 order-2 timeline-image text-md-center">
