--- a/content/home.html
+++ b/content/home.html
@@ -53,10 +53,19 @@
           <div class="bio-container">
 
             <p class="bio">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vestibulum vulputate magna, ut porttitor augue euismod ut. Quisque gravida erat a libero pretium convallis. Quisque in enim venenatis, feugiat sapien ut, tristique dui. Ut eget sapien diam. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum a sem quam. Vivamus quis lacus et eros vestibulum condimentum. Nullam lacinia luctus sem, at dictum nulla fermentum in. Mauris ut sodales lectus. Donec ut urna at urna elementum lobortis. Nulla convallis, dolor eget hendrerit porta, ipsum lorem lobortis dui, eget congue lacus mi at erat. Maecenas porta justo eget nulla sodales, vitae tincidunt dolor efficitur. Etiam venenatis tempus massa vel venenatis. Sed vel fermentum magna.
-
+              <p>Ciao!</p>
+              <p>Mi presento, sono Brian Atzori, nato a Varese il 25 Marzo 1997 (Era Marted&igrave;) e posso dirti che amo i cani e il Marvel Universe per iniziare :)</p>
+              <p>Se sei atterrat* fin qui c&rsquo;&egrave; una buona probabilit&agrave; che tu sia appassionat* di tech, digital o magari di crescita personale e professionale come me.</p>
+              <p>Ho diversi interessi, sono un&rsquo;amante dei viaggi e dello sport: porto con orgoglio quasi 10 anni di Krav Maga sulle mie spalle.</p>
+              <p>  Amo la lettura, un hobby che ho riscoperto negli ultimi anni e nel tempo libero mi piace giocare ai videogames e sono anche un avido consumatore di Film e Serie TV. (Brav* esatto, sono un nerd.)</p>
+              <p>Nella vita in questo momento lavoro in Discovery, la startup di cui sono Co-Founder e le mie giornate sono dedicate a questo e altri progetti, insieme a tanta formazione.</p>
+              <p>Nel mio percorso lavorativo sono stato un programmatore, un tecnico informatico e ora studio marketing, growth e finanza. Ogni giorno cerco di applicare il meglio di ci&ograve; che imparo da ognuna di queste discipline, in linea di massima vorrei raggiungere un profilo professionale orientato al Growth Hacking.</p>
+              <p>Personalmente credo molto nel valore della formazione e nel migliorare se stessi cercando di essere sempre la versione migliore di noi stessi.</p>
+              <p>Ho molti sogni nel cassetto: ad esempio in futuro mi piacerebbe scrivere qualcosa e il mio cervello purtroppo o per fortuna ha pile nucleari e non mi lascia mai in pace, processando continuamente nuovi input e dandomi nuovi spunti e aspirazioni.</p>
+              <p>Il mio reale obiettivo giornaliero per&ograve; &egrave; quello di chiudere gli occhi e addormentarmi sapendo di aver fatto il possibile per fare qualcosa che mi interessi davvero e soddisfi i miei desideri.</p>
+              <p>Ogni giorno voglio aver imparato qualcosa di nuovo, tutto questo cercando di dare un senso a quello che faccio, portando valore a me stesso e a chi mi circonda.</p>
+              <p>I miei principi sono due: esci sempre dagli schemi e dalle routine che gli altri tracciano per te e<br />tieni sempre la mente aperta, questo perch&egrave; citando il film "Castaway", "devo continuare a respirare&hellip; perch&eacute; domani il sole sorger&agrave; e chiss&agrave; la marea cosa pu&ograve; portare."</p>
             </p>
-
           </div>
 
           <div class="divider"></div>
@@ -98,7 +107,6 @@
                 <div class="col-10 col-md-5 order-3 order-md-1 timeline-content">
 
                   <h3 class=" text-light">Krav Maga con HS</h3>
-
                   <p>Nel corso del 2013 mi rendo conto che &egrave; necessario iniziare a curare la forma fisica e mentre ero alla ricerca di uno sfogo mi iscrivo ad un corso di Krav Maga, una disciplina di autodifesa israeliana, tenuto dalla societ&agrave; sportiva HS.</p>
                   <p>ll metodo HS &egrave; orientato alla formazione intensa, valorizzando i risultati che si possono ottenere con molto studio e pratica.</p>
                   <p>Con lo sport finalmente riesco a formare e rafforzare il carattere e la disciplina, acquistando sicurezza in me stesso e imparando il valore del sudore sulla fronte ma soprattutto a stringere sempre i denti.</p>
@@ -123,7 +131,6 @@
                 <div class="col-10 col-md-5 order-3 order-md-1 timeline-content">
 
                   <h3 class=" text-light">Si.El.Co Srl</h3>
-
                   <p>Dopo gli studi ho deciso di affrontare subito il mercato del lavoro e Si.El.Co &egrave; stata la mia prima esperienza lavorativa, come tecnico informatico.</p>
                   <p>Ho iniziato formattando computer e imparando cosa significa realmente lavorare in campo informatico e con un po' di esperienza alle spalle mi &egrave; stato assegnato il ruolo di addetto al monitoraggio dei sistemi informatici dei clienti dove per facilitarmi il lavoro ho anche creato un'automazione che permetteva il dialogo tra il sistema di segnalazioni e il sistema di ticketing interno.</p>
                   <p>Successivamente mi sono occupato con un team di 4 persone della gestione del cloud privato di Si.El.Co come figura junior, amministrando i sistemi dalla A alla Z e grazie a questo periodo di gavetta ho imparato moltissimo, creandomi un background molto ricco.</p>
@@ -148,12 +155,10 @@
                 <div class="col-10 col-md-5 order-3 order-md-1 timeline-content">
 
                   <h3 class=" text-light">Formazione Extra Lavorativa</h3>
-
                   <p>Alcuni eventi nella mia vita, insieme alla pandemia che &egrave; stato un periodo terribile per il mondo intero mi hanno portato a riflettere sulla mia vita e soprattutto su dove volessi arrivare in futuro.</p>
                   <p>Mi sono trovato a rispolverare il sogno di creare qualcosa di mio, ponendomi come proposito per l'anno 2021 di gettare le basi per un mio progetto.</p>
                   <p>Avendo imparato in passato il valore della formazione mi rendo conto che &egrave; necessario innanzitutto investire del tempo su me stesso per aumentarei il mio bagaglio di competenze, specie dopo essermi reso conto che la normalit&agrave; e la vita da dipendente <em>non mi bastavano.</em></p>
                   <p>Dopo aver raccolto diverse fonti ho iniziato a studiare dopo il lavoro e in pausa pranzo, approfondendo innanzitutto il mondo delle criptovalute che mi affascinava molto, successivamente quello del growth e del marketing per arrivare poi alla finanza classica.</p>
-
                 </div>
 
                 <div class="col-2 col-sm-1 px-md-3 order-2 timeline-image text-md-center">
@@ -175,12 +180,10 @@
                 <div class="col-10 col-md-5 order-3 order-md-1 timeline-content">
 
                   <h3 class=" text-light">Inizio del progetto "Discoapp"</h3>
-
                   <p>Dicembre 2020: Il caso o la fortuna hanno voluto che l'estate precedente conoscessi un certo Davide, durante una splendida vacanza in Sardegna organizzata da amici in comune e in quel frangente mi accenn&ograve; ad un progetto a cui stava lavorando.</p>
-                  <p>Rimanemmo molto amici anche dopo la vacanza e proprio mentre continuavo la mia formazione e mentre ero alla ricerca di idee, durante una chiaccherata su investimenti e business mi ricord&ograve; di questa iniziativa di cui mi aveva parlato, raccontandomi che era alla ricerca di una persona con competenze informatiche che lo aiutasse a gestire l'infrastruttura ma soprattutto a programmare.&nbsp;</p>
+                  <p>Rimanemmo molto amici anche dopo la vacanza e proprio mentre continuavo la mia formazione e mentre ero alla ricerca di idee, durante una chiaccherata su investimenti e business mi ricord&ograve; di questa iniziativa di cui mi aveva parlato, raccontandomi che era alla ricerca di una persona con competenze informatiche che lo aiutasse a gestire l'infrastruttura ma soprattutto a programmare.</p>
                   <p>In breve tempo organizzammo una chiamata e mi fece conoscere il team che stava costruendo e a Gennaio 2021 iniziammo a lavorare tutti insieme per concretizzare un'idea che inizialmente era chiamata "Find Your Party" o "Discoapp".</p>
                   <p>Ora le mie pause pranzo e le mie serate si dividevano tra formazione e un secondo lavoro.</p>
-                  
                 </div>
 
                 <div class="col-2 col-sm-1 px-md-3 order-2 timeline-image text-md-center">
@@ -203,7 +206,11 @@
 
                   <h3 class=" text-light">Delta Informatica SA</h3>
 
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, eaque amet deleniti hic quas qui cumque delectus aliquid, eius quia quod, quae, aliquam aspernatur facilis. Minima quod corporis dignissimos porro.</p>
+                  <p>Nell'estate del 2021 la "Discoapp" si era gi&agrave; trasformata in "Discovery" mentre continuavamo a sviluppare il progetto e io continuavo a formarmi, iniziavo per&ograve; a sentire la necessit&agrave; di cambiare aria dopo il mio primo impegno lavorativo.</p>
+                  <p>Dopo quasi 4 anni di crescita nello stesso ambiente sentivo di dover uscire dalla mia comfort zone e sperimentare altro rispetto a ci&ograve; che conoscevo, provare un altro ambiente e capire cosa ci fosse la fuori per me, anche puntando a migliorare la mia situazione economica per prepararmi un domani a lasciare con tranquillit&agrave; il lavoro per lavorare su Discovery.</p>
+                  <p>Anche questa volta il caso o la fortuna hanno voluto che un contatto mi consigliasse la candidatura per una posizione aperta come tecnico informatico in Svizzera, presso la Delta Informatica SA in cui iniziai a lavorare a fine Luglio.</p>
+                  <p>Qui ho trovato una mentalit&agrave; completamente diversa, non solo aziendale ma anche statale essendo la Svizzera diversa dall'Italia.</p>
+                  <p>In Delta mi sono occupato principalmente di assistenza ai clienti sia in remoto che on site, migliorando la base di conoscenze che avevo e aggiungendone di nuove ma soprattutto allenando l'interazione con il cliente.</p>
 
                 </div>
 
@@ -227,8 +234,8 @@
 
                   <h3 class=" text-light">Nasce Discovery Srl</h3>
 
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, eaque amet deleniti hic quas qui cumque delectus aliquid, eius quia quod, quae, aliquam aspernatur facilis. Minima quod corporis dignissimos porro.</p>
-
+                  <p>A Gennaio 2022 Discovery &egrave; diventata ufficialmente un'azienda.</p>
+                  <p>La fondazione &egrave; stata necessaria per finalizzare il superamento di un bando d'incubazione della camera di commercio di Como-Lecco in collaborazione con l'incubatore Como NExt che richiedeva la costituzione della Startup.</p>
                 </div>
 
                 <div class="col-2 col-sm-1 px-md-3 order-2 timeline-image text-md-center">
@@ -251,7 +258,8 @@
 
                   <h3 class=" text-light">Dimissioni Lavorative</h3>
 
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, eaque amet deleniti hic quas qui cumque delectus aliquid, eius quia quod, quae, aliquam aspernatur facilis. Minima quod corporis dignissimos porro.</p>
+                  <p>Dopo diversi mesi in Delta Informatica e dopo la costituzione di Discovery come Srl dopo un anno di attivit&agrave; mi sono reso conto che era arrivato il momento di fare una scelta, capire su cosa mi interessava investire, cosa mi rendeva felice e soprattutto cosa per me fosse una priorit&agrave;.</p>
+                  <p>A Marzo 2022 ho lasciato definitivamente il lavoro per dedicare il mio tempo ai miei progetti, alla mia formazione e a Discovery.</p>
 
                 </div>
 
@@ -275,7 +283,9 @@
 
                   <h3 class=" text-light">Inizio del percorso Start2Impact</h3>
 
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, eaque amet deleniti hic quas qui cumque delectus aliquid, eius quia quod, quae, aliquam aspernatur facilis. Minima quod corporis dignissimos porro.</p>
+                  <p>Uno step ulteriore che ho fatto dopo aver lasciato il lavoro, forte del tempo guadagnato, &egrave; stato iniziare un percorso di formazione intenso in Start2Impact.</p>
+                  <p>S2I &egrave; un'academy online con diversi percorsi in ambito digital e tech, orientata allo studio e alla pratica.</p>
+                  <p>La formazione prevede la creazione di progetti come metodo formativo in modo efficace e mi ha portato a creare questo sito-portfolio come primo progetto del mio percorso come Full-Stack Developer.</p>
 
                 </div>
 
@@ -297,9 +307,10 @@
 
                 <div class="col-10 col-md-5 order-3 order-md-1 timeline-content">
 
-                  <h3 class=" text-light"> Titolo </h3>
+                  <h3 class=" text-light"> Oggi </h3>
 
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, eaque amet deleniti hic quas qui cumque delectus aliquid, eius quia quod, quae, aliquam aspernatur facilis. Minima quod corporis dignissimos porro.</p>
+                  <p>Come anticipato in precedenza ora le mie giornate si compongono di tanta formazione, tanta lettura e il mio focus &egrave; rivolto verso Discovery.&nbsp;</p>
+                  <p>Ho diversi interessi e progetti che mi piacerebbe portare a termine ma a prescindere dall'occupazione e dagli investimenti che decider&ograve; di fare le mie "colonne portanti" saranno sempre: Formazione, sperimentazione e crescita.</p>
 
                 </div>
 
