First Version Finished

--- a/content/home.html
+++ b/content/home.html
@@ -40,7 +40,19 @@
 
   <body>
 
+      <div class="contact-button">
+
+        <a class="mail-to" href="mailto:hello@brianatzori.it"><img src="../assets/images/icon-mail.svg" style="max-width: 100px"/></a>
+
+      </div>
+
       <div class="container">
+
+        <div class="logo_brat_container">
+
+          <img class="logo_brat" src="../assets/images/logo_brat_svg.svg">
+
+        </div>
 
         <div class="content-container">
 
@@ -505,6 +517,12 @@
         </div>
 
       </div>
+
+      <footer class="site-footer">
+
+        <img class="logo_brianatzori" src="../assets/images/logo_brianatzori_svg.svg">
+
+      </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
