--- a/content/home.html
+++ b/content/home.html
@@ -63,21 +63,18 @@
           <h3 class="section-label">#bio</h3>
 
           <div class="bio-container">
-
-            <p class="bio">
-              <p>Ciao!</p>
-              <p>Mi presento, sono Brian Atzori, nato a Varese il 25 Marzo 1997 (Era Marted&igrave;) e posso dirti che amo i cani e il Marvel Universe per iniziare :)</p>
-              <p>Se sei atterrat* fin qui c&rsquo;&egrave; una buona probabilit&agrave; che tu sia appassionat* di tech, digital o magari di crescita personale e professionale come me.</p>
-              <p>Ho diversi interessi, sono un&rsquo;amante dei viaggi e dello sport: porto con orgoglio quasi 10 anni di Krav Maga sulle mie spalle.</p>
-              <p>  Amo la lettura, un hobby che ho riscoperto negli ultimi anni e nel tempo libero mi piace giocare ai videogames e sono anche un avido consumatore di Film e Serie TV. (Brav* esatto, sono un nerd.)</p>
-              <p>Nella vita in questo momento lavoro in Discovery, la startup di cui sono Co-Founder e le mie giornate sono dedicate a questo e altri progetti, insieme a tanta formazione.</p>
-              <p>Nel mio percorso lavorativo sono stato un programmatore, un tecnico informatico e ora studio marketing, growth e finanza. Ogni giorno cerco di applicare il meglio di ci&ograve; che imparo da ognuna di queste discipline, in linea di massima vorrei raggiungere un profilo professionale orientato al Growth Hacking.</p>
-              <p>Personalmente credo molto nel valore della formazione e nel migliorare se stessi cercando di essere sempre la versione migliore di noi stessi.</p>
-              <p>Ho molti sogni nel cassetto: ad esempio in futuro mi piacerebbe scrivere qualcosa e il mio cervello purtroppo o per fortuna ha pile nucleari e non mi lascia mai in pace, processando continuamente nuovi input e dandomi nuovi spunti e aspirazioni.</p>
-              <p>Il mio reale obiettivo giornaliero per&ograve; &egrave; quello di chiudere gli occhi e addormentarmi sapendo di aver fatto il possibile per fare qualcosa che mi interessi davvero e soddisfi i miei desideri.</p>
-              <p>Ogni giorno voglio aver imparato qualcosa di nuovo, tutto questo cercando di dare un senso a quello che faccio, portando valore a me stesso e a chi mi circonda.</p>
-              <p>I miei principi sono due: esci sempre dagli schemi e dalle routine che gli altri tracciano per te e<br />tieni sempre la mente aperta, questo perch&egrave; citando il film "Castaway", "devo continuare a respirare&hellip; perch&eacute; domani il sole sorger&agrave; e chiss&agrave; la marea cosa pu&ograve; portare."</p>
-            </p>
+              <p class="bio">Ciao!</p>
+              <p class="bio">Mi presento, sono Brian Atzori, nato a Varese il 25 Marzo 1997 (era Marted&igrave;) e posso dirti che amo i cani e il Marvel Universe per iniziare :)</p>
+              <p class="bio">Se sei atterrat* fin qui c&rsquo;&egrave; una buona probabilit&agrave; che tu sia appassionat* di tech, digital o magari di crescita personale e professionale come me.</p>
+              <p class="bio">Ho diversi interessi, sono un&rsquo;amante dei viaggi e dello sport: porto con orgoglio quasi 10 anni di Krav Maga sulle mie spalle.</p>
+              <p class="bio">Amo la lettura, un hobby che ho riscoperto negli ultimi anni e nel tempo libero mi piace giocare ai videogames e sono anche un avido consumatore di Film e Serie TV. (Brav* esatto, sono un nerd.)</p>
+              <p class="bio">Nella vita in questo momento lavoro in Discovery, la startup di cui sono Co-Founder e le mie giornate sono dedicate a questo e altri progetti, insieme a tanta formazione.</p>
+              <p class="bio">Nel mio percorso lavorativo sono stato un programmatore, un tecnico informatico e ora studio marketing, growth e finanza. Ogni giorno cerco di applicare il meglio di ci&ograve; che imparo da ognuna di queste discipline, in linea di massima vorrei raggiungere un profilo professionale orientato al Growth Hacking.</p>
+              <p class="bio">Personalmente credo molto nel valore della formazione per progredire nel proprio percorso e per cercare di essere sempre la versione migliore di noi stessi.</p>
+              <p class="bio">Ho molti sogni e progetti nel "cassetto": ad esempio in futuro mi piacerebbe scrivere qualcosa. Il mio cervello, purtroppo o per fortuna, ha pile nucleari e non mi lascia mai in pace, processando continuamente nuovi input e dandomi altri spunti e aspirazioni.</p>
+              <p class="bio">Il mio reale obiettivo giornaliero per&ograve; &egrave; quello di chiudere gli occhi e addormentarmi sapendo di aver fatto il possibile per fare qualcosa che mi interessi davvero e soddisfi i miei desideri.</p>
+              <p class="bio">Ogni giorno voglio aver imparato qualcosa di nuovo, tutto questo cercando di dare un senso a quello che faccio, portando valore a me stesso e a chi mi circonda.</p>
+              <p class="bio">I miei principi sono due: esci sempre dagli schemi e dalle routine che gli altri tracciano per te e tieni sempre la mente aperta, questo perch&egrave; citando il film "Castaway", "devo continuare a respirare&hellip; perch&eacute; domani il sole sorger&agrave; e chiss&agrave; la marea cosa pu&ograve; portare."</p>
           </div>
 
           <div class="divider"></div>
@@ -208,7 +205,7 @@
                               <div class="col-10 col-md-5 order-3 order-md-1 timeline-content">
 
                                 <h3 class=" text-light">Inizio del progetto "Discoapp"</h3>
-                                <p>Dicembre 2020: Il caso o la fortuna hanno voluto che l'estate precedente conoscessi un certo Davide, durante una splendida vacanza in Sardegna organizzata da amici in comune e in quel frangente mi accenn&ograve; ad un progetto a cui stava lavorando.</p>
+                                <p>Dicembre 2020: il caso o la fortuna hanno voluto che l'estate precedente conoscessi un certo Davide, durante una splendida vacanza in Sardegna organizzata da amici in comune e in quel frangente mi accenn&ograve; ad un progetto a cui stava lavorando.</p>
                                 <p>Rimanemmo molto amici anche dopo la vacanza e proprio mentre continuavo la mia formazione e mentre ero alla ricerca di idee, durante una chiaccherata su investimenti e business mi ricord&ograve; di questa iniziativa di cui mi aveva parlato, raccontandomi che era alla ricerca di una persona con competenze informatiche che lo aiutasse a gestire l'infrastruttura ma soprattutto a programmare.</p>
                                 <p>In breve tempo organizzammo una chiamata e mi fece conoscere il team che stava costruendo e a Gennaio 2021 iniziammo a lavorare tutti insieme per concretizzare un'idea che inizialmente era chiamata "Find Your Party" o "Discoapp".</p>
                                 <p>Ora le mie pause pranzo e le mie serate si dividevano tra formazione e un secondo lavoro.</p>
@@ -287,7 +284,7 @@
 
                                 <h3 class=" text-light">Dimissioni Lavorative</h3>
 
-                                <p>Dopo diversi mesi in Delta Informatica e dopo la costituzione di Discovery come Srl dopo un anno di attivit&agrave; mi sono reso conto che era arrivato il momento di fare una scelta, capire su cosa mi interessava investire, cosa mi rendeva felice e soprattutto cosa per me fosse una priorit&agrave;.</p>
+                                <p>Trascorsi alcuni mesi in Delta Informatica e considerando la recente costituzione di Discovery come Srl mi sono reso conto che era arrivato il momento di fare una scelta, per capire su cosa mi interessava investire, cosa mi rendeva felice e soprattutto cosa per me fosse una priorit&agrave;.</p>
                                 <p>A Marzo 2022 ho lasciato definitivamente il lavoro per dedicare il mio tempo ai miei progetti, alla mia formazione e a Discovery.</p>
 
                               </div>
@@ -312,7 +309,7 @@
 
                                 <h3 class=" text-light">Inizio del percorso Start2Impact</h3>
 
-                                <p>Uno step ulteriore che ho fatto dopo aver lasciato il lavoro, forte del tempo guadagnato, &egrave; stato iniziare un percorso di formazione intenso in Start2Impact.</p>
+                                <p>Uno step ulteriore che ho fatto dopo aver lasciato il lavoro, avendo più tempo a disposizione, &egrave; stato iniziare un percorso di formazione intenso in Start2Impact.</p>
                                 <p>S2I &egrave; un'academy online con diversi percorsi in ambito digital e tech, orientata allo studio e alla pratica.</p>
                                 <p>La formazione prevede la creazione di progetti come metodo formativo in modo efficace e mi ha portato a creare questo sito-portfolio come primo progetto del mio percorso come Full-Stack Developer.</p>
 
@@ -339,7 +336,7 @@
                                 <h3 class=" text-light"> Oggi </h3>
 
                                 <p>Come anticipato in precedenza ora le mie giornate si compongono di tanta formazione, tanta lettura e il mio focus &egrave; rivolto verso Discovery.&nbsp;</p>
-                                <p>Ho diversi interessi e progetti che mi piacerebbe portare a termine ma a prescindere dall'occupazione e dagli investimenti che decider&ograve; di fare le mie "colonne portanti" saranno sempre: Formazione, sperimentazione e crescita.</p>
+                                <p>Ho diversi interessi e progetti che mi piacerebbe portare a termine ma a prescindere dall'occupazione e dagli investimenti che decider&ograve; di fare le mie "colonne portanti" saranno sempre: formazione, sperimentazione e crescita.</p>
 
                               </div>
 
