--- a/content/home.html
+++ b/content/home.html
@@ -496,7 +496,7 @@
 
             <div class="contact-container">
 
-              <a href="https://www.instagram.com/hatzorihanzo/" target="_blank"><img src="../assets/images/icon-instagram.svg"/></a>
+              <a href="https://www.instagram.com/brianatzori/" target="_blank"><img src="../assets/images/icon-instagram.svg"/></a>
 
             </div>
 
@@ -520,13 +520,13 @@
 
             <div class="contact-container">
 
-              <a href="https://www.instagram.com/hatzorihanzo/" target="_blank"><img src="../assets/images/icon-discord.svg"/></a>
+              <a href="https://discord.com/invite/YQgBCqr4rX" target="_blank"><img src="../assets/images/icon-discord.svg"/></a>
 
             </div>
 
             <div class="contact-container">
 
-              <a href="https://www.reddit.com/user/BrianAtzori" target="_blank"><img src="../assets/images/icon-reddit.svg"/></a>
+              <a href="https://www.reddit.com/user/IAmbrianatzori/" target="_blank"><img src="../assets/images/icon-reddit.svg"/></a>
 
             </div>
 
@@ -538,7 +538,7 @@
 
       <footer class="site-footer">
 
-        <img class="logo_brianatzori" src="../assets/images/logo_brianatzori_svg.svg">
+
 
       </footer>
 
