--- a/content/home.html
+++ b/content/home.html
@@ -42,7 +42,7 @@
 
       <div class="contact-button">
 
-        <a class="mail-to" href="mailto:hello@brianatzori.it"><img src="../assets/images/icon-mail.svg" style="max-width: 100px"/></a>
+        <a class="mail-to" href="mailto:hello@brianatzori.it"><img src="../assets/images/icon-mail.svg" alt="Icona di una mail" style="max-width: 100px"/></a>
 
       </div>
 
@@ -50,13 +50,13 @@
 
         <div class="logo_brat_container">
 
-          <img class="logo_brat" src="../assets/images/logo_brat_svg.svg">
+          <img class="logo_brat" src="../assets/images/logo_brat_svg.svg" alt="Logo Brian Atzori Piccolo">
 
         </div>
 
         <div class="content-container">
 
-          <img class="self-pic" src="../assets/images/brat_bg.png"/>
+          <img class="self-pic" src="../assets/images/brat_bg.png" alt="Foto Brian Atzori"/>
 
           <h1 class="page-title">Brian Atzori</h1>
 
@@ -79,9 +79,11 @@
 
           <div class="divider"></div>
 
-          <h3 class="section-label">#percorso</h3>
+          <h2 class="section-label">#percorso</h2>
 
-          <div class="accordion" id="myAccordion">
+          <section>
+
+            <div class="accordion" id="myAccordion">
 
               <div class="accordion-item">
 
@@ -113,7 +115,7 @@
 
                               <div class="col-2 col-sm-1 px-md-3 order-2 timeline-image text-md-center">
 
-                                <img src="../assets/images/keynes.jpeg" class="img-fluid" alt="img">
+                                <img src="../assets/images/keynes.jpeg" class="img-fluid" alt="Logo Istituto JM Keynes">
 
                               </div>
 
@@ -138,7 +140,7 @@
 
                               <div class="col-2 col-sm-1 px-md-3 order-2 timeline-image text-md-center">
 
-                                <img src="../assets/images/hs.png" class="img-fluid" alt="img">
+                                <img src="../assets/images/hs.png" class="img-fluid" alt="Logo Palestra HS">
 
                               </div>
 
@@ -163,7 +165,7 @@
 
                               <div class="col-2 col-sm-1 px-md-3 order-2 timeline-image text-md-center">
 
-                                <img src="../assets/images/sielco.png" class="img-fluid" alt="img">
+                                <img src="../assets/images/sielco.png" class="img-fluid" alt="Logo Azienda Sielco">
 
                               </div>
 
@@ -188,7 +190,7 @@
 
                               <div class="col-2 col-sm-1 px-md-3 order-2 timeline-image text-md-center">
 
-                                <img src="../assets/images/books.png" class="img-fluid" alt="img">
+                                <img src="../assets/images/books.png" class="img-fluid" alt="Logo Libri">
 
                               </div>
 
@@ -214,7 +216,7 @@
 
                               <div class="col-2 col-sm-1 px-md-3 order-2 timeline-image text-md-center">
 
-                                <img src="../assets/images/disco-ball.png" class="img-fluid" alt="img">
+                                <img src="../assets/images/disco-ball.png" class="img-fluid" alt="Logo Palla da discoteca">
 
                               </div>
 
@@ -242,7 +244,7 @@
 
                               <div class="col-2 col-sm-1 px-md-3 order-2 timeline-image text-md-center">
 
-                                <img src="../assets/images/delta.png" class="img-fluid" alt="img">
+                                <img src="../assets/images/delta.png" class="img-fluid" alt="Logo Azienda Delta Informatica">
 
                               </div>
 
@@ -266,7 +268,7 @@
 
                               <div class="col-2 col-sm-1 px-md-3 order-2 timeline-image text-md-center">
 
-                                <img src="../assets/images/discovery-icon.png" class="img-fluid" alt="img" style="border-radius: 50%;">
+                                <img src="../assets/images/discovery-icon.png" class="img-fluid" alt="Logo Discovery App" style="border-radius: 50%;">
 
                               </div>
 
@@ -291,7 +293,7 @@
 
                               <div class="col-2 col-sm-1 px-md-3 order-2 timeline-image text-md-center">
 
-                                <img src="../assets/images/work.png" class="img-fluid" alt="img">
+                                <img src="../assets/images/work.png" class="img-fluid" alt="Icona Lavoro">
 
                               </div>
 
@@ -317,7 +319,7 @@
 
                               <div class="col-2 col-sm-1 px-md-3 order-2 timeline-image text-md-center">
 
-                                <img src="../assets/images/start2impact.png" class="img-fluid" alt="img">
+                                <img src="../assets/images/start2impact.png" class="img-fluid" alt="Logo Start2Impact">
 
                               </div>
 
@@ -342,7 +344,7 @@
 
                               <div class="col-2 col-sm-1 px-md-3 order-2 timeline-image text-md-center">
 
-                                <img src="../assets/images/grow.png" class="img-fluid" alt="img">
+                                <img src="../assets/images/grow.png" class="img-fluid" alt="Icona Crescita">
 
                               </div>
 
@@ -362,29 +364,37 @@
               </div>
           </div>
 
+          </section>
+
           <div class="divider"></div>
 
-          <h3 class="section-label">#progetti</h3>
+          <section>
 
-          <div class="projects-container">
+            <h2 class="section-label">#progetti</h2>
+
+            <div class="projects-container">
 
             <div class="project-container">
 
-              <a href="https://discovery-entertainment.com/" target="_blank"><img class="project-banner" src="../assets/images/copertina-discovery.png"/></a>
+              <a href="https://discovery-entertainment.com/" target="_blank"><img class="project-banner" alt="Banner Discovery Entertainment" src="../assets/images/copertina-discovery.png"/></a>
 
             </div>
 
           </div>
 
+          </section>
+
           <div class="divider"></div>
 
-          <h3 class="section-label">#skills</h3>
+          <section>
 
-          <div class="skills-wrapper">
+            <h2 class="section-label">#skills</h2>
+
+            <div class="skills-wrapper">
 
             <div class="skill-container">
 
-              <img src="../assets/images/icons8-n-50.png">
+              <img src="../assets/images/icons8-n-50.png" alt="Logo Nagios">
 
               <h6> Nagios <h6>
 
@@ -392,7 +402,7 @@
 
             <div class="skill-container">
 
-              <img src="../assets/images/icons8-veeam-48.png">
+              <img src="../assets/images/icons8-veeam-48.png" alt="Logo Veeam">
 
               <h6> Veeam <h6>
 
@@ -400,7 +410,7 @@
 
             <div class="skill-container">
 
-              <img src="../assets/images/icons8-vmware-48.png">
+              <img src="../assets/images/icons8-vmware-48.png" alt="Logo VMWare">
 
               <h6>VMWare<h6>
 
@@ -408,7 +418,7 @@
 
             <div class="skill-container">
 
-              <img src="../assets/images/icons8-open-end-wrench-100.png">
+              <img src="../assets/images/icons8-open-end-wrench-100.png" alt="Icona Strumenti">
 
               <h6>Gestione<br>Infrastruttura<h6>
 
@@ -416,7 +426,7 @@
 
             <div class="skill-container">
 
-              <img src="../assets/images/icons8-23-helpdesk-58.png">
+              <img src="../assets/images/icons8-23-helpdesk-58.png" alt="Icona Assistenza">
 
               <h6>Supporto<br>Tecnico<h6>
 
@@ -424,7 +434,7 @@
 
             <div class="skill-container">
 
-              <img src="../assets/images/icons8-nuvola-80.png">
+              <img src="../assets/images/icons8-nuvola-80.png" alt="Icona Cloud">
 
               <h6>Cloud<h6>
 
@@ -432,7 +442,7 @@
 
             <div class="skill-container">
 
-              <img src="../assets/images/icons8-coding-64.png">
+              <img src="../assets/images/icons8-coding-64.png" alt="Icona Programmazione">
 
               <h6>Coding<h6>
 
@@ -440,7 +450,7 @@
 
             <div class="skill-container">
 
-              <img src="../assets/images/icons8-krav-maga-64.png">
+              <img src="../assets/images/icons8-krav-maga-64.png" alt="Icona persone che lottano per Krav Maga">
 
               <h6>Krav Maga<h6>
 
@@ -448,7 +458,7 @@
 
             <div class="skill-container">
 
-              <img src="../assets/images/icons8-marketing-64.png">
+              <img src="../assets/images/icons8-marketing-64.png" alt="Icona Marketing">
 
               <h6>Marketing<h6>
 
@@ -456,7 +466,7 @@
 
             <div class="skill-container">
 
-              <img src="../assets/images/icons8-invest-64.png">
+              <img src="../assets/images/icons8-invest-64.png" alt="Icona Investimenti">
 
               <h6>Finanza<h6>
 
@@ -464,7 +474,7 @@
 
             <div class="skill-container">
 
-              <img src="../assets/images/icons8-bitcoin-48.png">
+              <img src="../assets/images/icons8-bitcoin-48.png" alt="Icona Bitcoin e criptovalute">
 
               <h6>Criptovalute<h6>
 
@@ -472,7 +482,7 @@
 
             <div class="skill-container">
 
-              <img src="../assets/images/icons8-growth-64.png">
+              <img src="../assets/images/icons8-growth-64.png" alt="Icona Growth">
 
               <h6>Growth<h6>
 
@@ -480,7 +490,7 @@
 
             <div class="skill-container">
 
-              <img src="../assets/images/icons8-ingranaggi-100.png">
+              <img src="../assets/images/icons8-ingranaggi-100.png" alt="Icona Ingranaggi Management">
 
               <h6>Management<h6>
 
@@ -488,49 +498,55 @@
 
           </div>
 
+          </section>
+
           <div class="divider"></div>
 
-          <h3 class="section-label">#contatti</h3>
+          <section>
 
-          <div class="contacts-wrapper">
+            <h2 class="section-label">#contatti</h2>
+
+            <div class="contacts-wrapper">
 
             <div class="contact-container">
 
-              <a href="https://www.instagram.com/brianatzori/" target="_blank"><img src="../assets/images/icon-instagram.svg"/></a>
+              <a href="https://www.instagram.com/brianatzori/" target="_blank"><img src="../assets/images/icon-instagram.svg" alt="Icona Instagram"/></a>
 
             </div>
 
             <div class="contact-container">
 
-              <a href="https://www.linkedin.com/in/brian-atzori" target="_blank"><img src="../assets/images/icon-linkedin.svg"/></a>
+              <a href="https://www.linkedin.com/in/brian-atzori" target="_blank"><img src="../assets/images/icon-linkedin.svg" alt="Icona LinkedIn"/></a>
 
             </div>
 
             <div class="contact-container">
 
-              <a href="https://twitter.com/AtzoriBrian" target="_blank"><img src="../assets/images/icon-twitter.svg"/></a>
+              <a href="https://twitter.com/AtzoriBrian" target="_blank"><img src="../assets/images/icon-twitter.svg" alt="Icona Twitter"/></a>
 
             </div>
 
             <div class="contact-container">
 
-              <a href="https://github.com/BrianAtzori" target="_blank"><img src="../assets/images/icon-github.svg"/></a>
+              <a href="https://github.com/BrianAtzori" target="_blank"><img src="../assets/images/icon-github.svg" alt="Icona GitHub"/></a>
 
             </div>
 
             <div class="contact-container">
 
-              <a href="https://discord.com/invite/YQgBCqr4rX" target="_blank"><img src="../assets/images/icon-discord.svg"/></a>
+              <a href="https://discord.com/invite/YQgBCqr4rX" target="_blank"><img src="../assets/images/icon-discord.svg" alt="Icona Discord"/></a>
 
             </div>
 
             <div class="contact-container">
 
-              <a href="https://www.reddit.com/user/IAmbrianatzori/" target="_blank"><img src="../assets/images/icon-reddit.svg"/></a>
+              <a href="https://www.reddit.com/user/IAmbrianatzori/" target="_blank"><img src="../assets/images/icon-reddit.svg" alt="Icona Reddit"/></a>
 
             </div>
 
           </div>
+
+          </section>
 
         </div>
 
