--- a/content/home.html
+++ b/content/home.html
@@ -376,7 +376,7 @@
 
             <div class="project-container">
 
-              <a href="https://discovery-entertainment.com/" target="_blank"><img class="project-banner" alt="Banner Discovery Entertainment" src="../assets/images/copertina-discovery.png"/></a>
+              <a href="https://discovery-entertainment.com/" target="_blank" rel="noopener"><img class="project-banner" alt="Banner Discovery Entertainment" src="../assets/images/copertina-discovery.png"/></a>
 
             </div>
 
@@ -510,37 +510,37 @@
 
             <div class="contact-container">
 
-              <a href="https://www.instagram.com/brianatzori/" target="_blank"><img src="../assets/images/icon-instagram.svg" alt="Icona Instagram"/></a>
+              <a href="https://www.instagram.com/brianatzori/" target="_blank" rel="noopener"><img src="../assets/images/icon-instagram.svg" alt="Icona Instagram"/></a>
 
             </div>
 
             <div class="contact-container">
 
-              <a href="https://www.linkedin.com/in/brian-atzori" target="_blank"><img src="../assets/images/icon-linkedin.svg" alt="Icona LinkedIn"/></a>
+              <a href="https://www.linkedin.com/in/brian-atzori" target="_blank" rel="noopener"><img src="../assets/images/icon-linkedin.svg" alt="Icona LinkedIn"/></a>
 
             </div>
 
             <div class="contact-container">
 
-              <a href="https://twitter.com/AtzoriBrian" target="_blank"><img src="../assets/images/icon-twitter.svg" alt="Icona Twitter"/></a>
+              <a href="https://twitter.com/AtzoriBrian" target="_blank" rel="noopener"><img src="../assets/images/icon-twitter.svg" alt="Icona Twitter"/></a>
 
             </div>
 
             <div class="contact-container">
 
-              <a href="https://github.com/BrianAtzori" target="_blank"><img src="../assets/images/icon-github.svg" alt="Icona GitHub"/></a>
+              <a href="https://github.com/BrianAtzori" target="_blank" rel="noopener"><img src="../assets/images/icon-github.svg" alt="Icona GitHub"/></a>
 
             </div>
 
             <div class="contact-container">
 
-              <a href="https://discord.com/invite/YQgBCqr4rX" target="_blank"><img src="../assets/images/icon-discord.svg" alt="Icona Discord"/></a>
+              <a href="https://discord.com/invite/YQgBCqr4rX" target="_blank" rel="noopener"><img src="../assets/images/icon-discord.svg" alt="Icona Discord"/></a>
 
             </div>
 
             <div class="contact-container">
 
-              <a href="https://www.reddit.com/user/IAmbrianatzori/" target="_blank"><img src="../assets/images/icon-reddit.svg" alt="Icona Reddit"/></a>
+              <a href="https://www.reddit.com/user/IAmbrianatzori/" target="_blank" rel="noopener"><img src="../assets/images/icon-reddit.svg" alt="Icona Reddit"/></a>
 
             </div>
 
