Various Styling and section conf

--- a/content/home.html
+++ b/content/home.html
@@ -78,9 +78,11 @@
 
           <h1 class="page-title">Brian Atzori</h1>
 
-          <h3 class="section-label">#bio</h3>
+          <section>
 
-          <div class="bio-container">
+            <h2 class="section-label">#bio</h2>
+
+            <div class="bio-container">
               <p class="bio">Ciao!</p>
               <p class="bio">Mi presento, sono Brian Atzori, nato a Varese il 25 Marzo 1997 (era Marted&igrave;) e posso dirti che amo i cani e il Marvel Universe per iniziare :)</p>
               <p class="bio">Se sei atterrat* fin qui c&rsquo;&egrave; una buona probabilit&agrave; che tu sia appassionat* di tech, digital o magari di crescita personale e professionale come me.</p>
@@ -93,13 +95,15 @@
               <p class="bio">Il mio reale obiettivo giornaliero per&ograve; &egrave; quello di chiudere gli occhi e addormentarmi sapendo di aver fatto il possibile per fare qualcosa che mi interessi davvero e soddisfi i miei desideri.</p>
               <p class="bio">Ogni giorno voglio aver imparato qualcosa di nuovo, tutto questo cercando di dare un senso a quello che faccio, portando valore a me stesso e a chi mi circonda.</p>
               <p class="bio">I miei principi sono due: esci sempre dagli schemi e dalle routine che gli altri tracciano per te e tieni sempre la mente aperta, questo perch&egrave; citando il film "Castaway", "devo continuare a respirare&hellip; perch&eacute; domani il sole sorger&agrave; e chiss&agrave; la marea cosa pu&ograve; portare."</p>
-          </div>
+            </div>
+
+          </section>
 
           <div class="divider"></div>
 
-          <h2 class="section-label">#percorso</h2>
-
           <section>
+
+            <h2 class="section-label">#percorso</h2>
 
             <div class="accordion" id="myAccordion">
 
@@ -592,11 +596,11 @@
 
             <input type="submit" value="Inviami una mail" class="send-button">
 
-            <label>Copyright 2022 © Brian Atzori</label>
-
         </form>
 
-      </section>
+        </section>
+
+        <label style="padding-bottom:30px;">Copyright 2022 © Brian Atzori</label>
 
       </footer>
 
